eksctl/apigwv2-httpapi.yaml

apiVersion: apigatewayv2.services.k8s.aws/v1alpha1
kind: Route
metadata:
  name: "ack-route"
spec:
  apiRef:
    from:
      name: "ack-api"
  routeKey: "ANY /"
  targetRef:
    from:
      name: "private-nlb-integration"
